@@ -1,0 +1,120 @@
+<!-- -*- coding: utf-8 -*- -->
+<article xmlns="http://docbook.org/ns/docbook" version="5.0">
+
+  <info>
+    <title>О BRL-CAD</title>
+
+    <author>
+      <personname>
+	<firstname>Christopher</firstname>
+	<othername>Sean</othername>
+	<surname>Morrison</surname>
+      </personname>
+
+      <affiliation>
+	<address>
+	  <orgname>BRL-CAD Open Source</orgname>
+	  <email>devs@brlcad.org</email>
+	</address>
+      </affiliation>
+    </author>
+
+    <author>
+      <contrib>
+        Russian Translation
+      </contrib>
+      <personname>
+        <firstname>Ilya</firstname>
+      </personname>
+    </author>
+  </info>
+
+  <section xml:id="article-body">
+    
+    <para>
+      BRL-CAD - мощная много-платформенная комбинаторная Constructive
+      Solid Geometry (CSG) система Конструктивной Твердотельной
+      Геометрии (КТГ) для твердотельного моделирования с открытым
+      исходным кодом, которая включает интерактивное 3D-твердотельное
+      редактирование, высоко-производительную поддержку трассирования
+      лучей для визуализации и геометрического анализа,
+      распределённую-через-компьютерную сеть network-distributed-
+      поддержку буфера кадров framebuffer, инструменты обработки
+      изображений и сигналов, поддержку трассировки пути и наложения
+      фотонов для реалистического создания изображений, программные
+      средства анализа производительности системы, внедрённый
+      интерфейс создания скриптов, и библиотеки для надёжного
+      высоко-производительного геометрического представления и
+      анализа.
+    </para>
+
+    <para>
+      Более 20 лет BRL-CAD был многоцелевой твердотельной
+      CAD-системой, используемой армией Объединённых Штатов для
+      моделирования оружейных систем и анализа их уязвимости. Системы
+      трёхмерного моделирования часто используются в различных
+      военных, академических и индустриальных приложений, включая
+      разработку и анализ транспортных средств, механических частей и
+      архитектуры. Программа была также использована для планирования
+      радиационных доз, медицинской визуализации, обучения
+      компьютерной графике, обучения моделированию и концепции
+      программ Constructive Solid Geometry (CSG) (Конструктивной
+      Твердотельной Геометрии), и тестирования производительности
+      систем среди других целей.
+    </para>
+
+    <para>
+      BRL-CAD поддерживает множество геометрических представлений с
+      расширяемым набором традиционных неявных (implicit)
+      твердотельных примитивов CSG - boxes (параллелепипеды),
+      ellipsoids (эллипсоиды), cones (конусы), and tori (торы) - с
+      набором явных (explicit) примитивов, состоящих из замкнутой
+      последовательности пожерхностей Uniform B-Spline, Non-Uniform
+      Rational B-Spline (NURBS); n-Manifold Geometry (NMG) и
+      mesh-геометрии в виде множества граней. Все геометрические
+      объекты могут бьть скомбинированы булевыми действиями (union -
+      соединение, intersection - "оставить пересекающиеся части
+      простейших примитивов", и difference - "оставить не
+      пересекающиеся части простейших примитивов".
+    </para>
+
+    <para>
+      BRL-CAD находился под активной разработкой с сохранением
+      портативности, которая включает системы типа DEC VAX-11/780 с
+      4.3 BSD; DECStations с ULTRIX; Silicon Graphics 3030, 4D "IRIS",
+      O2, Onyx; и Origin systems с различными версиями IRIX; Sun
+      Microsystems Sun-3 и Sun-4 Sparcs с SunOS; Cray 1, Cray X-MP,
+      Cray Y-MP и Cray 2 с UNICOS; DEC Alpha AXP с OSF/1; Apple
+      Macintosh II с A/UX; iPSC/860 Hypercube с NX/2; Alliant FX/8,
+      FX/80 и FX/2800; Gould/Encore SEL PowerNode6000/9000 и NP1; NeXT
+      workstations; IBM RS/6000; HPPA 9000/700 с HPUX;
+      Ardent/Stardent; Encore Multi-Max; и многое ещё.
+    </para>
+
+    <para>
+      BRL-CAD - коллекция более 400-от инструментов, утилит и
+      приложений, содержащая более миллиона строчек исходного кода.
+      Эта программа была задумана как много-платформенная и активно
+      развивалась и поддерживалась для многих операционных систем,
+      таких, как BSD, Linux, Solaris, Mac OS X, и Windows среди
+      прочих.  BRL-CAD распространяется в двоичном и исходном
+      программном коде как свободное программное обеспечение с
+      открытым исходным кодом free open source software (FOSS),
+      поддерживаемый утверждёнными пунктами лицензии Open Source
+      Initiative (OSI).
+    </para>
+
+    <note>
+      <para>
+        Mike Muuss создал начальную архитектуру и дизайн BRL-CAD в
+        1979. Развитие в качестве объединённого программного пакета
+        началось в 1983. Первый выпуск программы для общественности
+        был сделан в 1984. BRL-CAD стал проектом с открытым исходным
+        кодом 21 декабря 2004, с лицензированными под лицензиями LGPL
+        и BSD частями.
+      </para>
+    </note>
+
+  </section>
+
+</article>
